--- a/Python/mywork/studentDashboard/static/studentProfile.css
+++ b/Python/mywork/studentDashboard/static/studentProfile.css
@@ -202,6 +202,18 @@ header .h2andp p {
   min-width: 44px;
   min-height: 44px;
 }
+.spin {
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 
 /* NUMBER */
 .numberOf h3 {
